--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.1",
+    "@nuxtjs/dotenv": "^1.1.1",
+    "@nuxtjs/pwa": "^2.0.8",
     "axios": "^0.16.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
@@ -27,6 +30,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^3.5.0"
+    "eslint-plugin-promise": "^3.5.0",
+    "tachyons": "^4.10.0"
   }
 }
