--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "nuxt": "latest",
-    "source-map-support": "^0.4.15"
+    "redirect-ssl": "^1.3.0",
+    "source-map-support": "^0.4.15",
+    "vue-weather-widget": "^2.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
